Make deletion button visible again - fixes #117

--- a/packages/rocketchat-channel-settings/client/stylesheets/channel-settings.css
+++ b/packages/rocketchat-channel-settings/client/stylesheets/channel-settings.css
@@ -70,7 +70,7 @@ html.rtl .flex-tab {
 
 		& .button {
 			display: inline-block;
-			visibility: hidden;
+			visibility: visible;
 
 			padding: 8px;
 
